objects/Cleaner__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Amount_Due__c</fullName>
        <formula>Revenue_Earned__c -  Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Invoice__c.Cleaner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Number_Of_Executed_Jobs__c</fullName>
        <label>Number Of Executed Jobs</label>
        <summaryFilterItems>
            <field>Assigned_Cleaner__c.Revenue__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Assigned_Cleaner__c.Cleaner__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Revenue_Earned__c</fullName>
        <label>Revenue Earned</label>
        <summarizedField>Assigned_Cleaner__c.Revenue__c</summarizedField>
        <summaryForeignKey>Assigned_Cleaner__c.Cleaner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Cleaner</label><nameField>
        <label>Cleaner Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Cleaners</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount_Due__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>